fix build error

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -41,6 +41,7 @@ html(class="no-js")
   script(src="/scripts/common/menu.js")
   script(src="/scripts/common/header.js")
   script(src="/scripts/common/appointment.js")
+  script(src="/scripts/common/psychoprofile.js")
   script(src="/scripts/common/user.js")
   script(src="/scripts/common/course.js")
   script(src="/scripts/common/category.js")
