move image place

--- a/dionysus-client/yo/templates/home/article/fm.jade
+++ b/dionysus-client/yo/templates/home/article/fm.jade
@@ -1,5 +1,5 @@
 .centered.row
 	.ten.wide.column
-		img.ui.centered.image(src="/public/images/fm/1.png")
+		img.ui.centered.image(src="/public/images/fm1.png")
 .centered.row(style="background:#F4F5F6 !important;")
 	.twelve.wide.column#list
