--- a/dionysus-client/yo/templates/home/article/fmlist.jade
+++ b/dionysus-client/yo/templates/home/article/fmlist.jade
@@ -6,7 +6,7 @@
 				{{#if cover}}
 				img.ui.centered.image(src="{{cover}}")
 				{{else}}
-				img.ui.centered.image(src="/public/images/fm/2.png")
+				img.ui.centered.image(src="/public/images/fm2.png")
 				{{/if}}
 	{{/each}}
 .row
