finish viewing psychoprofile in profile

--- a/dionysus-client/yo/templates/home/profile/psychoprofiles.jade
+++ b/dionysus-client/yo/templates/home/profile/psychoprofiles.jade
@@ -7,9 +7,11 @@ table.ui.stackable.table
       th(class="two wide") 日期
       th(class="eight wide") 心理档案
   tbody
+    {{#each items}}
     tr
-      td 陆军
-      td 王鹏
-      td 心理课程
-      td 2015/06/31
-      td 测试
+      td {{consultantname}}
+      td {{username}}
+      td {{module}}
+      td {{datetime}}
+      td {{summary}}
+    {{/each}}
