--- a/dionysus-client/yo/templates/home/course/home.jade
+++ b/dionysus-client/yo/templates/home/course/home.jade
@@ -63,7 +63,7 @@
                   a.title(href="/courses/{{id}}") {{title}}
               p.course.content {{description}}
               .regBtn(style="text-align:center;padding-top:20px;")
-                a.reg.ui.green.tiny.basic.button(href="/courses/{{id}}/regroom") 加 入
+                .room.reg.ui.green.tiny.basic.button(data-id="{{id}}") 加 入
           |{{/each}}
       .two.column.centered.row
         .centered.column
@@ -87,6 +87,6 @@
                       label 开课时间 {{date}}
                       label#reg 已注册 {{registered}} 人
                   .column
-                    a.reg.ui.basic.tiny.green.button(href="/courses/{{id}}/regoffline") 加 入
+                    .offline.reg.ui.basic.tiny.green.button(data-id="{{id}}") 加 入
                 |{{/each}}
 
