--- a/dionysus-client/yo/templates/home/profile/psychoprofiles.jade
+++ b/dionysus-client/yo/templates/home/profile/psychoprofiles.jade
@@ -7,7 +7,7 @@ table.ui.stackable.table
       th(class="two wide") 日期
       th(class="eight wide") 心理档案
   tbody
-    {{#each items}}
+    {{#each profileItems}}
     tr
       td {{consultantname}}
       td {{username}}
