security control at client side, new location of article

--- a/dionysus-client/yo/templates/admin/articles/editor.jade
+++ b/dionysus-client/yo/templates/admin/articles/editor.jade
@@ -23,6 +23,7 @@
     select.ui.dropdown(name="location")
       option(value="") 选择位置
       option(value="slider") 首页滚动栏
+      option(value="normal") 首页普通内容
   .field
 .ui.divider
 .field
