revert register to normal layout, modal not work on mobile

--- a/dionysus-client/yo/templates/home/article/detailPage/detail.jade
+++ b/dionysus-client/yo/templates/home/article/detailPage/detail.jade
@@ -1,7 +1,7 @@
-.twelve.wide.column
+.sixteen.wide.mobile.twelve.wide.tablet.twelve.wide.computer.column
 	.ui.two.column.divided.stackable.equal.height.grid
-		.ten.wide.column
+		.ten.wide.computer.column
 			#detail.article-content
-		.six.wide.column
+		.six.wide.computer.column
 			#latest.article-right-content
 			#tag.article-right-content
