--- a/dionysus-client/yo/templates/home/article/homePage/articleSlider.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleSlider.jade
@@ -5,6 +5,6 @@ ul.slides
       {{#if cover}}
       img(src="{{cover}}")
       {{else}}
-      img(src="/public/images/slidex.jpg")
+      img(src="/public/images/slider-default.png")
       {{/if}}
   {{/each}}
