--- a/dionysus-client/yo/templates/home/header/modal.jade
+++ b/dionysus-client/yo/templates/home/header/modal.jade
@@ -16,7 +16,7 @@
         input.ui.primary.button#loginbutton(type="submit", value="登陆")              
     .ui.vertical.divider 或
     .center.aligned.column
-      a.ui.button.positive#register(href="#") 
+      a.ui.button.positive#register
         i.signup.icon
         | 没有账号? 注册
 .actions
