add security control for psychtest

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -57,13 +57,13 @@ html(class="no-js")
   script(src="/scripts/modules/category.js")
   script(src="/scripts/modules/site.js")
   script(src="/scripts/modules/consultant/consultant.js")
-  script(src="/scripts/modules/test.js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/profile.js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/error.js")
   script(src="/scripts/modules/course/home.js")
 
+  script(src="/scripts/ui/psychtests-ui.js")
   // endbuild
 
   // build:js(.) /scripts/froala_editor.js
