--- a/dionysus-client/yo/templates/home/psychtests/suite.jade
+++ b/dionysus-client/yo/templates/home/psychtests/suite.jade
@@ -6,6 +6,6 @@
     .item
       i.right.triangle.icon
       .content
-        a.header(title="{{ description }}", href="/psychtest/{{ id }}") {{title}}
+        a.header(title="{{ description }}", href="/psychtests/{{ id }}") {{title}}
     {{/each}}
 .ui.bottom.attached.button 提交套餐
