--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -31,6 +31,6 @@ script(src="/bower_components/datetimepicker/jquery.datetimepicker.js")
 script(src="/bower_components/flexslider/jquery.flexslider.js")
 script(src="/bower_components/twbs-pagination/jquery.twbsPagination.js")
 script(src="/bower_components/fullpage.js/jquery.fullPage.min.js")
-
+script(src="/bower_components/jplayer/dist/jplayer/jquery.jplayer.js")
 // endbuild
 
