add ut for psychtest security

--- a/dionysus-client/yo/templates/home/psychtests/singlechoice.jade
+++ b/dionysus-client/yo/templates/home/psychtests/singlechoice.jade
@@ -4,6 +4,6 @@
     {{#each options}}
     .field
       .ui.radio.checkbox
-        input(type="radio", name="choice", value="{{id}}", id="option-{{id}}")
+        input(type="radio", name="question-{{../id}}", value="{{id}}", id="option-{{id}}")
         label(for="option-{{id}}") {{identity}}. {{ description }}
     {{/each}}
