play 80%, now the player can play something

--- a/dionysus-client/yo/templates/home/article/fm.jade
+++ b/dionysus-client/yo/templates/home/article/fm.jade
@@ -1,5 +1,22 @@
 .centered.row
-	.ten.wide.column
-		img.ui.centered.image(src="/public/images/fm1.png")
+	.sixteen.wide.mobile.ten.wide.computer.column
+		.player-1
+		.player-container
+			.player-content
+				.player-title
+					.ui.header#title
+				.player-scripts 
+					p xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxddddddddddddddddddddddddddddddddddd
+				.player-seeking
+					.player-seekbar
+						.player-playbar
+				.player-current
+				.player-duration
+				.player-buttons
+					i.circular.inverted.teal.fast.backward.icon
+					i.big.circular.inverted.teal.play.icon
+					i.big.circular.inverted.teal.pause.icon
+					i.circular.inverted.teal.stop.icon
+					i.circular.inverted.teal.fast.forward.icon
 .centered.row(style="background:#F4F5F6 !important;")
 	.twelve.wide.column#list
