make psychtest page stay at center

--- a/dionysus-client/yo/templates/home/psychtests/psychtest.jade
+++ b/dionysus-client/yo/templates/home/psychtests/psychtest.jade
@@ -1,5 +1,6 @@
-h1.ui.header
-  | 心理测试套餐
-  .sub.header
-    | 请选择您想要的测试套餐
-.ui.cards
+.twelve.wide.column
+  h1.ui.header
+    | 心理测试套餐
+    .sub.header
+      | 请选择您想要的测试套餐
+  .ui.cards
