manage psychtest events

--- a/dionysus-client/yo/templates/home/psychtests/onebyone.jade
+++ b/dionysus-client/yo/templates/home/psychtests/onebyone.jade
@@ -1,6 +1,7 @@
-h2.ui.dividing.header 
-  {{ title }}
-  .sub.header {{ description }}
+.twelve.wide.column
+  h2.ui.dividing.header 
+    {{ title }}
+    .sub.header {{ description }}
 
-section.ui.vertical.segment.question
-footer.ui.vertical.segment.nav
+  section.ui.vertical.segment.question
+  footer.ui.vertical.segment.nav
