--- a/dionysus-client/yo/templates/home/article/fm.jade
+++ b/dionysus-client/yo/templates/home/article/fm.jade
@@ -5,8 +5,7 @@
 			.player-content
 				.player-title
 					.ui.header#title
-				.player-scripts 
-					p xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxddddddddddddddddddddddddddddddddddd
+				.player-scripts 欢饮来到心理FM，请在下方列表中选择你喜欢的内容。
 				.player-seeking
 					.player-seekbar
 						.player-playbar
