--- a/dionysus-client/yo/templates/home/article/fmlist.jade
+++ b/dionysus-client/yo/templates/home/article/fmlist.jade
@@ -2,7 +2,7 @@
 	{{#each items}}
 	.column
 		.ui.basic.segment
-			a(data-id="{{id}}", href="#")
+			a.fmitem(data-id="{{id}}", href="#")
 				{{#if cover}}
 				img.ui.centered.image(src="{{cover}}")
 				{{else}}
