remove fullpage, onegrid css and js

--- a/dionysus-client/yo/templates/home/course/home.jade
+++ b/dionysus-client/yo/templates/home/course/home.jade
@@ -28,7 +28,7 @@
           #approach
             label 授课方式
             |{{#each approach}}
-            a.approach.ui.small.basic.button(href="{{href}}") {{name}}
+            .approach.ui.small.basic.button(href="{{href}}") {{name}}
             |{{/each}}
       .twelve.wide.column.centered
         .ui.divider
