update course profile UI

--- a/dionysus-client/yo/templates/admin/courses/courseitem.jade
+++ b/dionysus-client/yo/templates/admin/courses/courseitem.jade
@@ -1,7 +1,7 @@
 td.consultant {{ consultant.username }}
-td.user {{ user.username }}
+td.registered {{ registered }}
 td.date {{ date }}
 td.approach {{ approach }}
 
 td.save
-  .ui.small.red.input.button(style="margin-left:20px;") 输入档案
+  .ui.small.red.input.button(style="margin-left:20px;") 查找参与者
