bug fix of article home page

--- a/dionysus-client/yo/templates/home/article/homePage/articleBlogSummary.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleBlogSummary.jade
@@ -3,7 +3,7 @@
 		.column
 			.row
 				h2.ui.header
-					a(href="/articles/list/cat{{items.[0].category.id}}/typeDOC") 更多博客
+					a(href="/articles/list/cat{{items.[0].category.id}}/typeBLOG") 更多博客
 			.ui.two.column.stackable.grid
 				.column
 					.ui.basic.segment
