--- a/dionysus-client/yo/templates/home/article/homePage/articleVideoSummary.jade
+++ b/dionysus-client/yo/templates/home/article/homePage/articleVideoSummary.jade
@@ -11,7 +11,7 @@
 		.column
 			.row
 				h2.ui.header
-					a(href="/articles/list/cat{{items.[0].category.id}}/typeDOC") 更多视频
+					a(href="/articles/list/cat{{items.[0].category.id}}/typeVIDEO") 更多视频
 			.ui.two.column.stackable.grid
 				.column
 					.ui.basic.segment
