finish phychoprofile for admin courses

--- a/dionysus-client/yo/templates/admin/courses/courseitem.jade
+++ b/dionysus-client/yo/templates/admin/courses/courseitem.jade
@@ -4,4 +4,4 @@ td.date {{ date }}
 td.approach {{ approach }}
 
 td.save
-  .ui.small.red.input.button(style="margin-left:20px;") 查找参与者
+  a.ui.small.red.input.button(style="margin-left:20px;", href="/admin/courseuserlist/{{id}}") 查找参与者
