chat initial checkin; fm filter by category

--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -31,5 +31,7 @@ script(src="/bower_components/datetimepicker/jquery.datetimepicker.js")
 script(src="/bower_components/flexslider/jquery.flexslider.js")
 script(src="/bower_components/twbs-pagination/jquery.twbsPagination.js")
 script(src="/bower_components/jplayer/dist/jplayer/jquery.jplayer.js")
+script(src="/bower_components/sockjs-client/dist/sockjs.js")
+script(src="/bower_components/stomp-websocket/lib/stomp.js")
 // endbuild
 
