--- a/dionysus-client/yo/templates/home/article/fm.jade
+++ b/dionysus-client/yo/templates/home/article/fm.jade
@@ -17,5 +17,7 @@
 					i.big.circular.inverted.teal.pause.icon
 					i.circular.inverted.teal.stop.icon
 					i.circular.inverted.teal.fast.forward.icon
+.centered.row
+	.twelve.wide.column#category
 .centered.row(style="background:#F4F5F6 !important;")
 	.twelve.wide.column#list
