--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -59,6 +59,7 @@ html(class="no-js")
   script(src="/scripts/modules/appointment.js")
   script(src="/scripts/modules/error.js")
   script(src="/scripts/modules/course/home.js")
+  script(src="/scripts/modules/chatRoom/chatRoom.js")
 
   script(src="/scripts/ui/psychtests-ui.js")
   // endbuild
