--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -17,6 +17,10 @@ html(class="no-js")
     link(rel="stylesheet", href="/bower_components/datetimepicker/jquery.datetimepicker.css")
     link(rel="stylesheet", href="/bower_components/flexslider/flexslider.css")
     link(rel="stylesheet", href="/styles/pagination.css")
+    link(rel="stylesheet", href="/bower_components/jquery.tagsinput/src/jquery.tagsinput.css")
+    link(rel="stylesheet", href="/bower_components/jquery-autocomplete/autocomplete.css")
+
+
     // endbuild
 
     title Dionysus
