--- a/dionysus-client/yo/app/jade/_library.jade
+++ b/dionysus-client/yo/app/jade/_library.jade
@@ -33,5 +33,8 @@ script(src="/bower_components/twbs-pagination/jquery.twbsPagination.js")
 script(src="/bower_components/jplayer/dist/jplayer/jquery.jplayer.js")
 script(src="/bower_components/sockjs-client/dist/sockjs.js")
 script(src="/bower_components/stomp-websocket/lib/stomp.js")
+script(src="/bower_components/jquery.tagsinput/src/jquery.tagsinput.js")
+script(src="/bower_components/jquery-autocomplete/jquery.autocomplete.js")
+
 // endbuild
 
