modify questions model UI

--- a/dionysus-client/yo/templates/home/question/create.jade
+++ b/dionysus-client/yo/templates/home/question/create.jade
@@ -1,8 +1,9 @@
 #create.question
   .ui.centered.grid
     .twelve.wide.column
-      #title
-      #description
-      #tagsInput
-      #submit.ui.button
+      .basic.ui.segment
+        #title
+        #description
+        #tagsInput
+        #submit.ui.button
 
