--- a/dionysus-client/yo/templates/home/question/question.jade
+++ b/dionysus-client/yo/templates/home/question/question.jade
@@ -1,12 +1,14 @@
 #home.question
   .ui.centered.divided.grid
     .eight.wide.column
-      #popular
-      #cats
-      #questions
-      #pagnation
+      .basic.ui.segment
+        #popular
+        #cats
+        #questions
+        #pagnation
     .four.wide.column
-      #create
-      #tags
+      .basic.ui.segment
+        #create
+        #tags
 
 
