--- a/dionysus-client/yo/templates/home/question/questionHome.jade
+++ b/dionysus-client/yo/templates/home/question/questionHome.jade
@@ -1,12 +1,12 @@
 #home.question
   .ui.centered.divided.grid
     .eight.wide.column
-      .basic.ui.segment
+      #content.basic.ui.segment
         #popular
         #cats
         #questions
         #pagnation
-    .four.wide.column
+    .sidebar.four.wide.column
       .basic.ui.segment
         #create
         #tags
