update pscyhtest page ui

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -10,6 +10,21 @@ main {
   padding-bottom: 0px;
 }
 
+.facet {
+  background-color: #F5F5F5;
+  padding: 1rem;
+}
+
+
+.ui.list.psychtests {
+  .ui.grid + .grid {
+    margin-top: 0;
+  }
+  .item a {
+    margin : 2px;
+  }
+}
+
 .jumbotron {
   background-image: url(/public/images/site1.jpg);
   background-size: cover;
