--- a/dionysus-client/yo/templates/home/psychtests/psychtest.jade
+++ b/dionysus-client/yo/templates/home/psychtests/psychtest.jade
@@ -1,6 +1,36 @@
-.twelve.wide.column
-  h1.ui.header
-    | 心理测试套餐
-    .sub.header
-      | 请选择您想要的测试套餐
-  .ui.cards
+.row
+  .six.wide.column.facet
+    h2.ui.header
+      | 在线心理测试
+
+    .ui.list.psychtests
+      .item.ui.grid
+        span.four.wide.column 受众群分类：
+        .twelve.wide.column
+          a.ui.label(href="#") 个体/团体
+          a.ui.label(href="#") 企业
+      .item.ui.grid
+        span.four.wide.column 测试项目：
+        .twelve.wide.column
+          a.ui.label(href="#") 常规单项检测
+          a.ui.label(href="#") 常规套餐
+      .item.ui.grid
+        span.four.wide.column 测试类型：
+        .twelve.wide.column
+          a.ui.label(href="#") 全部
+          a.ui.label(href="#") 人格测试
+          a.ui.label(href="#") 心理健康评定测试
+          a.ui.label(href="#") 行为测试
+          a.ui.label(href="#") 认知发展测试
+          a.ui.label(href="#") 学习与教育测试
+          a.ui.label(href="#") 职业测试
+          a.ui.label(href="#") 情侣体检（婚检）
+          a.ui.label(href="#") 亲子（家庭）体检
+
+
+  .six.wide.column
+    | Image place holder
+
+.twelve.wide.column.ui.cards
+
+
