update psychtest images

--- a/dionysus-client/yo/templates/home/psychtests/psychtest.jade
+++ b/dionysus-client/yo/templates/home/psychtests/psychtest.jade
@@ -29,7 +29,7 @@
 
 
   .six.wide.column
-    | Image place holder
+    img.ui.image.fluid(src="/public/images/心理测试.jpg", alt="每日一测")
 
 .twelve.wide.column.ui.cards
 
