update psychtest page ui

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -25,6 +25,15 @@ main {
   }
 }
 
+.ui.list.suites {
+  .item {
+    margin-top : 2rem;
+    > .grid {
+      margin-top: 0;
+    }
+  }
+}
+
 .jumbotron {
   background-image: url(/public/images/site1.jpg);
   background-size: cover;
