--- a/dionysus-client/yo/templates/home/psychtests/psychtest.jade
+++ b/dionysus-client/yo/templates/home/psychtests/psychtest.jade
@@ -31,6 +31,6 @@
   .six.wide.column
     img.ui.image.fluid(src="/public/images/心理测试.jpg", alt="每日一测")
 
-.twelve.wide.column.ui.cards
+.twelve.wide.column.ui.list.suites
 
 
