--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -1,5 +1,8 @@
+@charset "UTF-8";
+
 @import "course";
 @import "audioPlayer";
+@import "psychtest";
 
 main {
   display: block;
@@ -8,30 +11,6 @@ main {
   margin-bottom: 1rem;
   padding: 1rem;
   padding-bottom: 0px;
-}
-
-.facet {
-  background-color: #F5F5F5;
-  padding: 1rem;
-}
-
-
-.ui.list.psychtests {
-  .ui.grid + .grid {
-    margin-top: 0;
-  }
-  .item a {
-    margin : 2px;
-  }
-}
-
-.ui.list.suites {
-  .item {
-    margin-top : 2rem;
-    > .grid {
-      margin-top: 0;
-    }
-  }
 }
 
 .jumbotron {
