--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -1,5 +1,5 @@
 doctype html
-html(class="no-js")
+html
   head
     meta(charset="utf-8")
     meta(name="description",  content="")
@@ -8,22 +8,20 @@ html(class="no-js")
     link(rel="shortcut icon", href="/favicon.ico")
 
     // build:css({.,.tmp}) /styles/main.css
-    link(rel="stylesheet", href="/styles/semantic.css")
-    link(rel="stylesheet", href="/styles/main.css")
     link(rel="stylesheet", href="/bower_components/fontawesome/css/font-awesome.css")
     link(rel="stylesheet", href="/bower_components/froala/css/froala_editor.css")
     link(rel="stylesheet", href="/bower_components/froala/css/froala_style.css")
     link(rel="stylesheet", href="/bower_components/toastr/toastr.css")
     link(rel="stylesheet", href="/bower_components/datetimepicker/jquery.datetimepicker.css")
     link(rel="stylesheet", href="/bower_components/flexslider/flexslider.css")
-    link(rel="stylesheet", href="/styles/pagination.css")
     link(rel="stylesheet", href="/bower_components/jquery.tagsinput/src/jquery.tagsinput.css")
     link(rel="stylesheet", href="/bower_components/jquery-autocomplete/autocomplete.css")
-
-
+    link(rel="stylesheet", href="/styles/semantic.css")
+    link(rel="stylesheet", href="/styles/main.css")
+    link(rel="stylesheet", href="/styles/pagination.css")
     // endbuild
 
-    title Dionysus
+    title 汇心心理
   body.dionysus
     include ./jade/layout
 
