remove unused templates

--- a/dionysus-client/yo/app/index.jade
+++ b/dionysus-client/yo/app/index.jade
@@ -23,6 +23,12 @@ html
 
     title 汇心心理
   body.dionysus
+    div#header
+    main#main
+    footer#footer
+    #login-dialog
+    #register-dialog
+      
     include ./jade/layout
 
   include ./jade/_library
