update header style

--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -1,20 +1,20 @@
-.centered.row
+.container
 	.twelve.wide.column
 		.ui.middle.aligned.stackable.grid
 			.eight.wide.column
 				img.image(src="/public/images/logo.jpg")
 			.eight.wide.right.aligned.column
 				.ui.text.menu
-					a#login.item(href="#") 登录
-					a#register.item(href="#") 注册
+					a.item#login(href="#") 登录
+					a.item#register(href="#") 注册
 					a.item(href="#") 关于我们
-.ui.inverted.teal.vertical.segment
-	.ui.page.stackable.centered.grid
-		.twelve.wide.column.nav-line(style="padding:0;")
-			.nav-horizontal
-				a.nav-link(href="/") 首页
-				a.nav-link(href="/articles") 心理知识
-				a.nav-link(href="/consultants") 心理咨询
-				a.nav-link(href="/courses") 心理课程
-				a.nav-link(href="/psychtestsuites") 心理测试
-				a.nav-link(href="/fms") 心理FM
+
+.ui.inverted.teal.segment
+  .container
+    .ui.menu.inverted.teal
+			a.item(href="/") 首页
+			a.item(href="/articles") 心理知识
+			a.item(href="/consultants") 心理咨询
+			a.item(href="/courses") 心理课程
+			a.item(href="/psychtestsuites") 心理测试
+			a.item(href="/fms") 心理FM
