simplify header view

--- a/dionysus-client/yo/app/styles/main.less
+++ b/dionysus-client/yo/app/styles/main.less
@@ -4,6 +4,27 @@
 @import "audioPlayer";
 @import "psychtest";
 
+.brand {
+  background-image: url('/public/images/logo.jpg');
+  background-position: left center;
+  background-repeat: no-repeat;
+  height : 80px;
+
+  .ui.menu {
+    padding-top: 50px;
+  }
+}
+
+#header .segment.teal {
+  border-bottom: 4px solid rgb(0, 165, 159);
+}
+
+.ui.menu.primary .item {
+  padding: 1rem;
+}
+body {
+  padding-top: 1rem;
+}
 main {
   display: block;
   min-height: 450px;
