--- a/dionysus-client/yo/templates/home/header/nav.jade
+++ b/dionysus-client/yo/templates/home/header/nav.jade
@@ -1,13 +1,9 @@
-.container
-  .twelve.wide.column
-    .ui.middle.aligned.stackable.grid
-      .eight.wide.column
-        img.image(src="/public/images/logo.jpg")
-      .eight.wide.right.aligned.column
-        .ui.text.menu
-          a.item#login(href="#") 登录
-          a.item#register(href="#") 注册
-          a.item(href="#") 关于我们
+.container.brand
+  .right.floated.six.wide.column
+    .ui.text.menu
+      a.item#login(href="#") 登录
+      a.item#register(href="#") 注册
+      a.item(href="#") 关于我们
 
 .ui.inverted.teal.segment
   .container
