--- a/dionysus-client/yo/templates/home/consultant/consultantHome.jade
+++ b/dionysus-client/yo/templates/home/consultant/consultantHome.jade
@@ -1,33 +1,31 @@
-.twelve.wide.column
-	.ui.page.stackable.grid
-		.two.column.equal.height.row
-			.column#expertise
-				.ui.basic.segment
-					h3.ui.header 在线心理咨询
-					p 咨询话题:
-					.ui.secondary.menu
-						a.item(href="/consultants") 所有
-						{{#each expertises}}
-						a.item(href="/consultants/list/{{name}}"){{name}}
-						{{/each}}
-			.column
-				a(href="/consultants/info/detail")
-					img(src="/public/images/consultantinfo.jpg")
-		.row
-			.ui.three.column.stackable.grid
-				{{#each items}}
-				.column
-					{{#if avatar}}
-					img.ui.centered.circular.small.image(src="{{avatar}}")
-					{{else}}
-					img.ui.centered.circular.small.image(src="/public/images/placeholder.png")
-					{{/if}}
-					.ui.basic.center.aligned.segment
-						h4.ui.center.aligned.header					
-							.content {{realName}}
-								.sub.header {{about}}
-						a.ui.green.basic.button(href="/consultants/{{id}}") 预约咨询
-				{{/each}}
-		.row
-			.center.aligned.column
-				#paging
+.row
+  .six.wide.column#expertise
+    .ui.basic.segment
+      h3.ui.header 在线心理咨询
+      p 咨询话题:
+      .ui.secondary.menu
+        a.item(href="/consultants") 所有
+        {{#each expertises}}
+        a.item(href="/consultants/list/{{name}}"){{name}}
+        {{/each}}
+  .six.wide.column
+    a(href="/consultants/info/detail")
+      img(src="/public/images/consultantinfo.jpg")
+.row
+  .ui.three.column.stackable.grid
+    {{#each items}}
+    .column
+      {{#if avatar}}
+      img.ui.centered.circular.small.image(src="{{avatar}}")
+      {{else}}
+      img.ui.centered.circular.small.image(src="/public/images/placeholder.png")
+      {{/if}}
+      .ui.basic.center.aligned.segment
+        h4.ui.center.aligned.header
+          .content {{realName}}
+            .sub.header {{about}}
+        a.ui.green.basic.button(href="/consultants/{{id}}") 预约咨询
+    {{/each}}
+.row
+  .center.aligned.column
+    #paging
