--- a/dionysus-client/yo/templates/home/profile/menu.jade
+++ b/dionysus-client/yo/templates/home/profile/menu.jade
@@ -5,7 +5,7 @@
       .content 你好，{{ username  }}
         .sub.header {{ about  }}
         .sub.header 
-          a(href="#")#myinfo 修改我的个人信息
+          a.ui.basic.green.tiny.button#myinfo 修改我的个人信息
 h4.ui.horizontal.header.divider
   i.bar.char.icon
 .ui.page.stackable.grid
@@ -13,23 +13,23 @@ h4.ui.horizontal.header.divider
     .centered.column
       .ui.horizontal.list
         .item
-          a(href="#")#myarticles 
+          a#myarticles 
             i.small.circular.book.icon
             | 我的文章
         .item
-          a(href="#")#myappointments 
+          a#myappointments 
             i.small.circular.chat.icon
             | 我的咨询
         .item
-          a(href="#")#mycourses 
+          a#mycourses 
             i.small.circular.users.icon 
             | 我的课程 
         .item
-          a(href="#")#mytests 
+          a#mytests 
             i.small.circular.question.icon 
             | 我的测试
         .item
-          a(href="#")#myprofiles 
+          a#myprofiles 
             i.small.circular.book.icon 
             | 我的心理档案
   .row
