--- a/dionysus-client/yo/templates/home/profile/personal.jade
+++ b/dionysus-client/yo/templates/home/profile/personal.jade
@@ -1,9 +1,9 @@
 .ui.two.column.middle.aligned.stackable.grid
   .four.wide.column
     {{#if avatar}}
-    img.ui.small.image(src="{{ avatar}}")
+    img.ui.small.image.mypic(src="{{ avatar}}")
     {{else}}
-    img.ui.small.image(src="/public/images/placeholder.png")
+    img.ui.small.image.mypic(src="/public/images/placeholder.png")
     {{/if}}
   .four.wide.column
     .ui.basic.segment
