--- a/dionysus-client/yo/app/admin.jade
+++ b/dionysus-client/yo/app/admin.jade
@@ -58,6 +58,7 @@ html(class="no-js")
   script(src="/scripts/common/psychoprofile.js")
   script(src="/scripts/common/menu.js")
   script(src="/scripts/common/header.js")
+  script(src="/scripts/common/chatRoom.js")  
   script(src="/scripts/admin/admin.js")
   script(src="/scripts/admin/article-management.js")
   script(src="/scripts/admin/category-management.js")
@@ -66,6 +67,7 @@ html(class="no-js")
   script(src="/scripts/admin/appointment-management.js")
   script(src="/scripts/admin/consultant-management.js")
   script(src="/scripts/admin/tests.js")
+  script(src="/scripts/admin/chatRoom-management.js")
   script(src="/scripts/modules/commonUtils.js")
   // endbuild
 
