question UI js initial check in

--- a/dionysus-client/yo/templates/home/question/editor.jade
+++ b/dionysus-client/yo/templates/home/question/editor.jade
@@ -1,5 +1,12 @@
 #create.question
-  #title
-  #description
-  #tagsInput
-  #submit.ui.button
+  lael.module 你问我答
+  .ui.form
+    #QTitle
+      span
+        label 问题
+      input#title
+    #QDescription
+      label 问题详细描述
+      textarea#description
+    #tagsInput
+    #submit.ui.button
