--- a/dionysus-client/yo/templates/home/question/questionList.jade
+++ b/dionysus-client/yo/templates/home/question/questionList.jade
@@ -4,8 +4,9 @@
     .ui.small.image.createdby
       img(src="{{author.avatar}}")
     .content
-      .header {{title}}
+      a.header(href="/questions/{{id}}") {{title}}
       .meta
+        span.author {{author.username}}
         span.createdAt {{createdDate.year}}-{{createdDate.monthOfYear}}-{{createdDate.dayOfMonth}}
         span.numberAnswer {{numberOfAnswers}}
       .description
